2002-10-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Also set SHLEXT_VER, SHLLIB_VER, SHLBIN_VER.
	* Makeconf.in: Substitute them here.
	Also substitute SHLLINKEXT.

2002-10-25  Per Persson <persquare@mac.com>

	* aclocal.m4 (OCTAVE_CXX_PRAGMA_INTERFACE_IMPLEMENTATION): Fix
	first test to properly fail on OS X.  Fix typo in final test to
	set result.

2002-10-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mk-opts.pl (emit_opt_class_header): Make set_options another
	name for copy.

2002-10-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (do-subst-config-vals): Don't substitute
	OCTAVE_CONF_OCTAVE_LITE.
	(OCTAVE_LITE): Delete.

	* Makeconf.in: Use HAVE_DLOPEN_API, HAVE_LOADLIBRARY_API, and
	HAVE_SHL_LOAD_API instead of WITH_DL and WITH_SHL.

	* configure.in: Rewrite the way we handle dynamic linking.
	If dynamic linking is used always do what was previously only
	enabled by --enable-lite-kernel.

2002-10-17  Paul Kienzle <pkienzle@users.sf.net>

	* configure.in: Define WITH_DYNAMIC_LINKING based on --enable-shared.
	Add -lwsock32 to LIBS for MinGW.

2002-10-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (OCTAVE_LANG_PROG_NO_CONFDEFS): New macro.
	(OCTAVE_CXX_PRAGMA_INTERFACE_IMPLEMENTATION): Use it along with
	AC_LINK_IFELSE instead of AC_TRY_LINK.
	Require both programs to compile for success.

2002-10-16  Paul Kienzle <pkienzle@users.sf.net>

	* aclocal.m4: Both Cygwin and MinGW don't prepend underscores.
	* configure.in: MinGW builds shared libraries the same as Cygwin.
	MinGW must link to winsock explicitly.
	* install-octave.in: MinGW and Cygwin both need OCTAVE_HOME.

2002-10-15  Paul Kienzle <pkienzle@users.sf.net>

	* configure.in (library_path_var): New variable.

2002-10-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (SH_LDFLAGS): Additional options for Cygwin:
	-Wl,--export-all-symbols -Wl,--enable-auto-import.

	* Makeconf.in (TERMLIBS): Substitute here.
