@@ -54,7 +54,7 @@ HAVE_DLOPEN_API = @HAVE_DLOPEN_API@
 HAVE_SHL_LOAD_API = @HAVE_SHL_LOAD_API@
 HAVE_LOADLIBRARY_API = @HAVE_LOADLIBRARY_API@
 
-WITH_DYNAMIC_LINKING = @WITH_DYNAMIC_LINKING@
+ENABLE_DYNAMIC_LINKING = @ENABLE_DYNAMIC_LINKING@
 
 STATIC_LIBS = @STATIC_LIBS@
 
@@ -430,7 +430,7 @@ $(SED) < $< \
   -e "s;%OCTAVE_CONF_STATIC_LIBS%;\"${STATIC_LIBS}\";" \
   -e "s;%OCTAVE_CONF_UGLY_DEFS%;\"${UGLY_DEFS}\";" \
   -e "s;%OCTAVE_CONF_VERSION%;\"${version}\";" \
-  -e "s;%OCTAVE_CONF_WITH_DYNAMIC_LINKING%;\"${WITH_DYNAMIC_LINKING}\";" \
+  -e "s;%OCTAVE_CONF_ENABLE_DYNAMIC_LINKING%;\"${ENABLE_DYNAMIC_LINKING}\";" \
   -e "s;%OCTAVE_CONF_XTRA_CFLAGS%;\"${XTRA_CFLAGS}\";" \
   -e "s;%OCTAVE_CONF_XTRA_CXXFLAGS%;\"${XTRA_CXXFLAGS}\";" \
   -e "s;%OCTAVE_CONF_YACC%;\"${YACC}\";" \
