@@ -22,7 +22,7 @@ dnl Copyright (C) 1996, 1997 John W. Eaton
 ### 02111-1307, USA. 
 
 AC_INIT
-AC_REVISION($Revision: 1.382 $)
+AC_REVISION($Revision: 1.383 $)
 AC_PREREQ(2.52)
 AC_CONFIG_SRCDIR([src/octave.cc])
 AC_CONFIG_HEADER(config.h)
@@ -596,6 +596,17 @@ AC_ARG_ENABLE(shared,
   SHARED_LIBS=false)
 AC_SUBST(SHARED_LIBS)
 
+### Enable dynamic linking.  --enable-shared implies this, so
+### --enable-dl is only need if you are only building static libraries
+### and want to try dynamic linking too (works on some systems, for
+### example, OS X and Windows).
+
+AC_ARG_ENABLE(dl,
+  [  --enable-dl             create shared libraries (not all systems)],
+  [if test "$enableval" = no; then ENABLE_DYNAMIC_LINKING=false;
+   else ENABLE_DYNAMIC_LINKING=true; fi],
+  ENABLE_DYNAMIC_LINKING=false)
+
 if $STATIC_LIBS || $SHARED_LIBS; then
   true
 else
@@ -897,7 +908,6 @@ LD_CXX='$(CXX)'
 LIBDLFCN=
 DLFCN_INCFLAGS=
 RDYNAMIC_FLAG=
-WITH_DYNAMIC_LINKING=false
 DL_API_MSG=""
 dlopen_api=false
 shl_load_api=false
@@ -953,8 +963,8 @@ if $SHARED_LIBS; then
   fi
 
   if $dlopen_api || $shl_load_api || $loadlibrary_api; then
-    WITH_DYNAMIC_LINKING=true
-    AC_DEFINE(WITH_DYNAMIC_LINKING, 1, [Define if using dynamic linking])
+    ENABLE_DYNAMIC_LINKING=true
+    AC_DEFINE(ENABLE_DYNAMIC_LINKING, 1, [Define if using dynamic linking])
   fi
 else
   LIBOCTINTERP='$(TOPDIR)/src/liboctinterp.$(LIBEXT)'
@@ -965,7 +975,7 @@ AC_SUBST(LD_CXX)
 AC_SUBST(LIBDLFCN)
 AC_SUBST(DLFCN_INCFLAGS)
 AC_SUBST(RDYNAMIC_FLAG)
-AC_SUBST(WITH_DYNAMIC_LINKING)
+AC_SUBST(ENABLE_DYNAMIC_LINKING)
 AC_SUBST(LIBOCTINTERP)
 AC_SUBST(LIBOCTAVE)
 AC_SUBST(LIBCRUFT)
@@ -1351,7 +1361,7 @@ Octave is now configured for $canonical_host_type
   Do internal array bounds checking:  $BOUNDS_CHECKING
   Build static libraries:             $STATIC_LIBS
   Build shared libraries:             $SHARED_LIBS
-  Dynamic Linking:                    $WITH_DYNAMIC_LINKING $DL_API_MSG
+  Dynamic Linking:                    $ENABLE_DYNAMIC_LINKING $DL_API_MSG
   Include support for GNU readline:   $USE_READLINE
 ])
 
